--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ colorama==0.4.3
 Django==3.0.4
 django-filter==2.3.0
 django-fitbit==0.3.0
+django-widget-tweaks==1.4.8
 djangorestframework==3.11.0
 fitbit==0.3.1
 future==0.18.2
